tests/test55.rael.exp
Error [1:10]: Expected expression after comma in log node
| log 123, log
|          ^
